2012-10-12  Geoffrey Garen  <ggaren@apple.com>

        I pity da foo' who's converting numbers to strings
        https://bugs.webkit.org/show_bug.cgi?id=99197

        Reviewed by Gavin Barraclough.

        40% speedup on PerformanceTests/Dromaeo/dom-traverse.html. Probably speeds
        some other things up too.

        Credit to Eric Seidel for spotting this.

        * bindings/scripts/CodeGeneratorJS.pm:
        (GenerateImplementation): getOwnPropertySlotByIndex doesn't need to prefer
        string lookup in the static table because our static tables don't contain
        properties that are numbers.

        I believe this is low-hanging fruit left behind by Phil's
        getOwnPropertySlotByIndex optimization, but it's also possible that this was a
        regression at some point. I didn't check.

2012-10-13  Adam Barth  <abarth@webkit.org>

        Remove dead code in Node.idl
        https://bugs.webkit.org/show_bug.cgi?id=99237

        Reviewed by Maciej Stachowiak.

        We don't implement this feature. This code is dead and should be
        removed.

        * dom/Node.idl:

2012-10-12  Simon Fraser  <simon.fraser@apple.com>

        Fix GraphicsLayerCA visible rect computation in the face of perspective and preserve-3d
        https://bugs.webkit.org/show_bug.cgi?id=99212

        Reviewed by Tim Horton.

        GraphicsLayerCA::computeVisibleRect() was incorrect for layer trees with perspective
        and preserve-3d, so fix that, and add some tests.
        
        Perspective is implemented via childrenTransform(); if our parent has one,
        we have to left-multiply this into the transformation matrix.
        
        We have to test both this layer and its parent when deciding whether to accumulate
        or flatten.
        
        Use state.mappedQuad() rather than state.lastPlanarQuad(), because the last planar
        quad might be for some distant ancestor, and there may be intermediate preserve-3d
        layers.
